src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Nuture 1 - Awareness</fullName>
        </values>
        <values>
            <fullName>Nuture 2 - Advantage</fullName>
        </values>
        <values>
            <fullName>Nuture 3 - Action</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Assignment_Notes__c</fullName>
        <label>Assignment Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contacted_Date__c</fullName>
        <description>Date that the lead stage was moved to Contacted. Used for reporting.</description>
        <label>Contacted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Company_ID__c</fullName>
        <label>ZoomInfo Company ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_First_Updated__c</fullName>
        <description>Date and time when the record was first created or updated by ZoomInfo</description>
        <label>ZoomInfo First Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Id__c</fullName>
        <externalId>true</externalId>
        <label>ZoomInfo Contact ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOZISF__ZoomInfo_Last_Updated__c</fullName>
        <description>Date and time when the record was last created or updated by ZoomInfo</description>
        <label>ZoomInfo Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_in_Contacted__c</fullName>
        <formula>IF(
NOT(ISBLANK(Nurture_2_Date__c)), Nurture_2_Date__c - Contacted_Date__c ,
IF(
NOT(ISBLANK(Nurture_3_Date__c)), Nurture_3_Date__c - Contacted_Date__c,
IF(
NOT(ISBLANK(Unqualified_Date__c)), Unqualified_Date__c - Contacted_Date__c,
IF(
NOT(ISBLANK(ConvertedDate)), ConvertedDate - Contacted_Date__c,
TODAY() - Contacted_Date__c)))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days that the lead was int he Contacted stage.</inlineHelpText>
        <label>Days in Contacted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_In_Discussions__c</fullName>
        <formula>IF(
   NOT(ISBLANK(Nurture_3_Date__c)),Nurture_3_Date__c - Nurture_2_Date__c,
IF(
   NOT(ISBLANK(Unqualified_Date__c)),Unqualified_Date__c - Nurture_2_Date__c,
IF(
   NOT(ISBLANK(Qualified_Date__c)), Qualified_Date__c - Nurture_2_Date__c,
TODAY() - Nurture_2_Date__c))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days the Lead is in the In Discussion Stage.</inlineHelpText>
        <label>Days in In Discussions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_New__c</fullName>
        <formula>IF(
   NOT(ISBLANK(Nurture_1_Date__c)), Nurture_1_Date__c - DATEVALUE(CreatedDate),
   IF(
      NOT(ISBLANK(Contacted_Date__c)), Contacted_Date__c - DATEVALUE(CreatedDate),
      IF(
         NOT(ISBLANK(Nurture_2_Date__c)), Nurture_2_Date__c - DATEVALUE(CreatedDate),
         IF(
            NOT(ISBLANK(Nurture_3_Date__c)), Nurture_3_Date__c - DATEVALUE(CreatedDate),
            IF(
               NOT(ISBLANK(Unqualified_Date__c)), Unqualified_Date__c - DATEVALUE(CreatedDate),
               IF(
                  NOT(ISBLANK(ConvertedDate)), ConvertedDate - DATEVALUE(CreatedDate),
TODAY()-DATEVALUE(CreatedDate))))))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days that the lead was in the New status.</inlineHelpText>
        <label>Days in New</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Nurture_1__c</fullName>
        <formula>IF(
NOT(ISBLANK(Contacted_Date__c)), Contacted_Date__c - Nurture_1_Date__c,
IF(
NOT(ISBLANK(Nurture_2_Date__c)), Nurture_2_Date__c - Nurture_1_Date__c,
IF(
NOT(ISBLANK(Nurture_3_Date__c)), Nurture_3_Date__c - Nurture_1_Date__c,
IF(
NOT(ISBLANK(Unqualified_Date__c)), Unqualified_Date__c - Nurture_1_Date__c,
IF(
NOT(ISBLANK(ConvertedDate)), ConvertedDate - Nurture_1_Date__c,
TODAY() - Nurture_1_Date__c))))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days that the lead was in the Nurture 1 status.</inlineHelpText>
        <label>Days in Nurture 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Stalling__c</fullName>
        <formula>IF(
   NOT(ISBLANK(Unqualified_Date__c)), Unqualified_Date__c - Nurture_3_Date__c,
IF(
   NOT(ISBLANK(ConvertedDate)), ConvertedDate - Nurture_3_Date__c,
IF(
   NOT(ISBLANK(Nurture_2_Date__c)), Nurture_2_Date__c - Nurture_3_Date__c,
IF(
   NOT(ISBLANK(Contacted_Date__c)), Contacted_Date__c  - Nurture_3_Date__c,
IF(
   NOT(ISBLANK(Nurture_1_Date__c)), Nurture_1_Date__c  - Nurture_3_Date__c,
TODAY() -  Nurture_3_Date__c))))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days the Lead was in the Stalling status.</inlineHelpText>
        <label>Days in Stalling</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C-Suite</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Engineering &amp; Technical</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsLead__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Used for reporting purposes.  Maps to the Opportunity and Contact.</inlineHelpText>
        <label>IsLead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Contact_Profile__c</fullName>
        <label>LinkedIn Contact Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Marketing_Notes__c</fullName>
        <label>Marketing Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Suspend__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Suspend all marketing activity when checked</description>
        <label>Marketing Suspend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label># of Employees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nurture_1_Date__c</fullName>
        <description>Date that the lead stage was moved to Nurture 1 Awareness. Used for reporting.</description>
        <label>Nurture 1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nurture_2_Date__c</fullName>
        <description>Date that the lead stage was moved to Nurture 2. Used for reporting.</description>
        <label>Nurture 2 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nurture_3_Date__c</fullName>
        <description>Date that the lead stage was moved to Nurture 3. Used for reporting.</description>
        <label>Nurture 3 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Unqualified_Reason__c</fullName>
        <label>Other Unqualified Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Qualified_Date__c</fullName>
        <description>Date that the lead stage was moved to Qualified. Used for reporting.</description>
        <label>Qualified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Type__c</fullName>
        <description>This field is being created to allow Lead conversion as the field requirement for Opportunity.Revenue_Type__c does not allow the creation of an Opportunity. Solutions approved by Ann Cruz.</description>
        <label>Revenue Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Business</fullName>
                    <default>true</default>
                    <label>New Business</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Self_Insured__c</fullName>
        <description>Requested by Jason Ramirez (2019-07-18).</description>
        <label>Self-Insured</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>I don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sync_to_Marketo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync to Marketo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Timeframe__c</fullName>
        <label>Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>6-9 Months</fullName>
                </value>
                <value>
                    <fullName>9-12 Months</fullName>
                </value>
                <value>
                    <fullName>12+ Months</fullName>
                </value>
                <value>
                    <fullName>none</fullName>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UTM_Tracking__c</fullName>
        <description>UTM Tracking field</description>
        <label>UTM Tracking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unqualified_Date__c</fullName>
        <description>Date that the lead stage was moved to Unqualified. Used for reporting.</description>
        <label>Unqualified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unqualified_Reason__c</fullName>
        <label>Unqualified Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Spam/Solicitation</fullName>
                </value>
                <value>
                    <fullName>Invalid Contact Info</fullName>
                </value>
                <value>
                    <fullName>Does not meet MQL criteria</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cirrusadv__Created_by_Cirrus_Insight__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this record was created by Cirrus Insight. This checkbox does not have to be included on the page layout, except with Contact Manager, Group, and Professional Edition organizations.</description>
        <label>Created by Cirrus Insight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_AQC_Date__c</fullName>
        <label>mkto_AQC Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_AQL_Date__c</fullName>
        <label>mkto_AQL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_Acquisition_Date__c</fullName>
        <inlineHelpText>Used with the Marketo integration</inlineHelpText>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_Acquisition_Program_Id__c</fullName>
        <label>Acquisition Program Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_Acquisition_Program__c</fullName>
        <inlineHelpText>Used with the Marketo integration.</inlineHelpText>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_Contact_Status__c</fullName>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>MQL</fullName>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>In Discussion</fullName>
                </value>
                <value>
                    <fullName>Stalling</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mkto_Inferred_City__c</fullName>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_Inferred_Company__c</fullName>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_Inferred_Country__c</fullName>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_Inferred_Metropolitan_Area__c</fullName>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_Inferred_Phone_Area_Code__c</fullName>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_Inferred_Postal_Code__c</fullName>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_Inferred_State_Region__c</fullName>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_Lead_Score__c</fullName>
        <inlineHelpText>Used with Marketo Integration.</inlineHelpText>
        <label>Lead Score</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_Lifecycle_Status__c</fullName>
        <label>Lifecycle Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Engaged</fullName>
                </value>
                <value>
                    <fullName>AQL</fullName>
                </value>
                <value>
                    <fullName>TAL</fullName>
                </value>
                <value>
                    <fullName>TQL</fullName>
                </value>
                <value>
                    <fullName>SAL</fullName>
                </value>
                <value>
                    <fullName>SQL</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Recycle</fullName>
                </value>
                <value>
                    <fullName>Not a Lead</fullName>
                </value>
                <value>
                    <fullName>AQC</fullName>
                </value>
                <value>
                    <fullName>SAC</fullName>
                </value>
                <value>
                    <fullName>SQC</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Lost-Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mkto_Lost_Date__c</fullName>
        <label>mkto_Lost Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_MQL_Date__c</fullName>
        <label>mkto_MQL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_Opt_In_DateTime__c</fullName>
        <label>mkto_Opt-In DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_Opt_In_Source_Detail__c</fullName>
        <label>mkto_Opt-In Source Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mkto_Opt_In_Source__c</fullName>
        <label>mkto_Opt-In Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>mkto_Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_Original_Referrer__c</fullName>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_Original_Search_Engine__c</fullName>
        <label>Original Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_Original_Search_Phrase__c</fullName>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_Original_Source_Info__c</fullName>
        <label>Original Source Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_Original_Source_Type__c</fullName>
        <label>Original Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_Recycle_Date__c</fullName>
        <label>mkto_Recycle Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_SAC_Date__c</fullName>
        <label>mkto_SAC Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_SAL_Date__c</fullName>
        <label>mkto_SAL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_SQC_Date__c</fullName>
        <label>mkto_SQC Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_SQL_Date__c</fullName>
        <label>mkto_SQL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_Status_Reason__c</fullName>
        <description>Used in the Marketo integration.</description>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Junk/spam</fullName>
                </value>
                <value>
                    <fullName>Went dark</fullName>
                </value>
                <value>
                    <fullName>Bad fit</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mkto_TAC_Date__c</fullName>
        <label>mkto_TAC Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_TAL_Date__c</fullName>
        <label>mkto_TAL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_TQC_Date__c</fullName>
        <label>mkto_TQC Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_TQL_Date__c</fullName>
        <label>mkto_TQL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_UTM_Campaign__c</fullName>
        <label>mkto_UTM_Campaign</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mkto_UTM_Medium__c</fullName>
        <label>mkto_UTM Medium</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Add_to_Marketo_Campaign__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Add_to_Marketo_Campaign?contactType=Lead&amp;contactIds=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;Add to Marketo Campaign&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add to Marketo Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__HideDate__c</fullName>
        <label>Hide Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Date__c</fullName>
        <label>Last Interesting Moment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Desc__c</fullName>
        <label>Last Interesting Moment Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Source__c</fullName>
        <label>Last Interesting Moment Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Type__c</fullName>
        <label>Last Interesting Moment Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment__c</fullName>
        <formula>IF(!ISNULL(mkto_si__Last_Interesting_Moment_Date__c),
    HYPERLINK(&quot;/apex/mkto_si__Lead_Full_List?mode=fullList&amp;view=IM&amp;id=&quot; &amp; Id, mkto_si__Last_Interesting_Moment_Type__c &amp; &quot; -- &quot; &amp; SUBSTITUTE(mkto_si__Last_Interesting_Moment_Desc__c,SUBSTITUTE($Label.mkto_si__system_newline, &quot;--linebreak--&quot;, &quot;&quot;),&quot; &quot;) ), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Interesting Moment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__MSIContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MSIContactId</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mkto_si__Priority__c</fullName>
        <label>Engagement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score_Value__c</fullName>
        <label>Relative Score Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Relative_Score_Value__c, 0), 3),
            0, IMAGE(&quot;https://s3.amazonaws.com/marketo-sales-insight/images/star0_small.png&quot;,&quot;0&quot;),
            1, IMAGE(&quot;https://s3.amazonaws.com/marketo-sales-insight/images/star1_small.png&quot;,&quot;1&quot;),
            2, IMAGE(&quot;https://s3.amazonaws.com/marketo-sales-insight/images/star2_small.png&quot;,&quot;2&quot;),
            3, IMAGE(&quot;https://s3.amazonaws.com/marketo-sales-insight/images/star3_small.png&quot;,&quot;3&quot;),
        &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relative Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Insight__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Lead_Full_List?mode=fullList&amp;id=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;Sales Insight&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Insight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency_Value__c</fullName>
        <label>Urgency Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Urgency_Value__c, 0),3),
            0, IMAGE(&quot;https://s3.amazonaws.com/marketo-sales-insight/images/fire0_small.png&quot;,&quot;0&quot;),
            1, IMAGE(&quot;https://s3.amazonaws.com/marketo-sales-insight/images/fire1_small.png&quot;,&quot;1&quot;),
            2, IMAGE(&quot;https://s3.amazonaws.com/marketo-sales-insight/images/fire2_small.png&quot;,&quot;2&quot;),
            3, IMAGE(&quot;https://s3.amazonaws.com/marketo-sales-insight/images/fire3_small.png&quot;,&quot;3&quot;),
        &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__View_in_Marketo__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Marketo_Lead_Detail?objType=Lead&amp;objId=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;View in Marketo&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View in Marketo</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>New,Nuture 1 - Awareness,Contacted,Nuture 2 - Advantage,Nuture 3 - Action,Qualified</value>
        </filters>
        <filters>
            <field>Number_of_Employees__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Leads</label>
    </listViews>
    <listViews>
        <fullName>Lead_Form_Fill_on_Crossover</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>Lead form on Crossover</value>
        </filters>
        <label>Lead Form Fill on Crossover</label>
    </listViews>
    <listViews>
        <fullName>Lead_Management</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>Sync_to_Marketo__c</columns>
        <filterScope>Everything</filterScope>
        <label>Lead Management</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Other_Unqualified_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    ISPICKVAL(Unqualified_Reason__c, &apos;Other&apos;),
    ISBLANK( Other_Unqualified_Reason__c)
)</errorConditionFormula>
        <errorDisplayField>Other_Unqualified_Reason__c</errorDisplayField>
        <errorMessage>Complete the Other Unqualified Reason when &apos;Other&apos; is the Unqualified Reason.</errorMessage>
    </validationRules>
</CustomObject>